--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,3 +1,16 @@
+// prettier-ignore
 {
-  "extends": "@react-native/typescript-config/tsconfig.json"
+  "target": "esnext" /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017','ES2018' or 'ESNEXT'. */,
+  "module": "commonjs" /* Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', or 'ESNext'. */,
+  "lib": [
+    "es6"
+  ],
+  "moduleResolution": "node",
+  "esModuleInterop": true,
+  "compilerOptions": {
+    /* Visit https://aka.ms/tsconfig.json to read more about this file */
+
+    /* Completeness */
+    "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
+  }
 }
