--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
   ],
   "moduleResolution": "node",
   "esModuleInterop": true,
+  "extends": "@tsconfig/react-native/tsconfig.json",
   "compilerOptions": {
     /* Visit https://aka.ms/tsconfig.json to read more about this file */
 
