--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "axios": "^1.6.7",
     "buffer": "^6.0.3",
     "cbor-rn-prereqs": "^9.0.0",
     "jsrsasign": "^11.1.0",
