--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -252,7 +252,9 @@ jobs:
       - name: Install dependencies
         working-directory: ./
         run: |
-          yarn install --immutable && \
+          # yarn install --immutable && \
+          # git status
+          npm install && \
           git status
 
         # Actual environment variables are not being picked up
