--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-qrcode-svg": "^6.3.0",
     "readable-stream": "^4.5.2",
     "stream-browserify": "^3.0.0",
+    "text-encoding": "^0.7.0",
     "text-encoding-polyfill": "^0.6.7"
   },
   "devDependencies": {
