--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -61,7 +61,9 @@ jobs:
 
       - name: Configure ruby
         uses: ruby/setup-ruby@v1
-
+        with:
+          ruby-version: 2.6
+          
       - name: What XCode are we using?
         run: |
           xcode-select -p
