--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
     "test": "jest"
   },
   "dependencies": {
+    "@capacitor/android": "^6.0.0",
+    "@capacitor/cli": "^6.0.0",
+    "@capacitor/core": "^6.0.0",
+    "@capacitor/ios": "^6.0.0",
     "axios": "^1.6.7",
     "buffer": "^6.0.3",
     "cbor-rn-prereqs": "^9.0.0",
+    "googleapis": "^109.0.1",
     "jsrsasign": "^11.1.0",
-    "mdl-ts": "file:./mdl-ts-0.1.0.tgz",
+    "mdl-ts": "https://github.com/CQEN-QDCE/mdl-ts/releases/download/v0.1.0/mdl-ts-v0.1.0.tgz",
     "react": "18.2.0",
     "react-native": "0.73.5",
     "react-native-camera": "^4.2.1",
@@ -23,8 +28,7 @@
     "readable-stream": "^4.5.2",
     "stream-browserify": "^3.0.0",
     "text-encoding": "^0.7.0",
-    "text-encoding-polyfill": "^0.6.7",
-    "googleapis": "^109.0.1"
+    "text-encoding-polyfill": "^0.6.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
